feat: create customer entity, service controller repository